# RainmeterMediaPlayer

./: CMakeLists.txt
src/: MediaPlayer.cpp
